# breakout-opengl

./: CMakeLists.txt  dr_mp3.h  dr_wav.h  game.cpp  game.h  game_object.h  main.cpp  resource_manager.cpp  sound_manager.h  sprite_renderer.cpp
glad/src/: glad.c
include/glad/: glad.h
levels/: four.lvl
shaders/: particle.fs  post_processing.vs
src/ball_object/: CMakeLists.txt  ball_object.cpp
src/game/: game.h
src/game_level/: CMakeLists.txt  game_level.cpp  game_level.h
src/game_object/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/particle_generator/: CMakeLists.txt
src/post_processor/: CMakeLists.txt  post_processor.cpp  post_processor.h
src/power_up/: CMakeLists.txt  power_up.h
src/resource_manager/: CMakeLists.txt
src/shader/: CMakeLists.txt  shader.h
src/sprite_renderer/: CMakeLists.txt
src/text_renderer/: CMakeLists.txt  text_renderer.cpp  text_renderer.h
src/texture/: CMakeLists.txt
